Fix wrongly restricted procedures. (#795)